--- a/2.-nestjs-typeorm/.env
+++ b/2.-nestjs-typeorm/.env
@@ -3,3 +3,5 @@ DATABASE_PORT = 3306
 DATABASE_USERNAME = root
 DATABASE_PASSWORD = molina125
 DATABASE_NAME = typeorm_crud
+JWT_SECRET = myStrongSecret
+PORT = 3000
