Add Restricciones User

--- a/2.-nestjs-typeorm/.env
+++ b/2.-nestjs-typeorm/.env
@@ -5,3 +5,5 @@ DATABASE_PASSWORD = molina125
 DATABASE_NAME = typeorm_crud
 JWT_SECRET = myStrongSecret
 PORT = 3000
+DEFAULT_USER_EMAIL = admin123@gmail.com
+DEFAULT_USER_PASSWORD = 123456789
