--- a/2.-nestjs-typeorm/package.json
+++ b/2.-nestjs-typeorm/package.json
@@ -33,6 +33,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "mysql": "^2.18.1",
+    "nest-access-control": "^2.0.2",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
