TypeORM - MySql Authentication and CRUD

--- a/2.-nestjs-typeorm/package.json
+++ b/2.-nestjs-typeorm/package.json
@@ -18,7 +18,11 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "//" : "Estos son los comandos de Typeorm para el uso de las migraciones",
+    "db:migration:generate": "npx typeorm migration:generate -n",
+    "db:migration:run": "npx typeorm migration:run",
+    "db:migration:revert": "npx typeorm migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
@@ -44,6 +48,7 @@
     "typeorm": "^0.2.39"
   },
   "devDependencies": {
+    "@hapi/joi": "^17.1.1",
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
